--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
+    "@mantine/next": "^5.3.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
