--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@mantine/core": "^5.3.0",
     "@mantine/hooks": "^5.3.0",
     "@mantine/next": "^5.3.0",
+    "@stripe/stripe-js": "^1.36.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "stripe": "^10.8.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
