--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "stripe": "^10.8.0"
   },
   "devDependencies": {
