--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^5.3.0",
     "@mantine/hooks": "^5.3.0",
     "@mantine/next": "^5.3.0",
+    "@prisma/client": "^4.3.1",
     "@stripe/stripe-js": "^1.36.0",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "postcss": "^8.4.16",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
