--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.3.0",
     "@mantine/hooks": "^5.3.0",
     "@mantine/next": "^5.3.0",
